<resources>
    <string name="app_name">LatteEc</string>
    <!--delegate_index-->
    <string name="search">搜索</string>
    <string name="scan_icon">{icon-scan}</string>
    <string name="message_icon">{fa-bullhorn}</string>
    <string name="group_dialog">选择分类</string>
    <!--remote url-->
    <!--分页查询记录-->
    <string name="user_record">user_record</string>
    <!--修改记录栏目-->
    <string name="modify_channel">modify_channel</string>
    <!--用户栏目-->
    <string name="user_channel">user_channel</string>
    <!--删除记录-->
    <string name="delete_record">delete_record</string>
    <!--新增记录-->
    <string name="add_record">user_record</string>
    <!--delegate_channel-->
    <string name="sort">分类(7)</string>
    <string name="content_more">more ></string>
    <string name="channel_refresh">刷新</string>
    <!--delegate_channel_detail-->
    <string name="channel_detail_menu_delete">删除栏目</string>
    <string name="channel_detail_menu_modify">修改栏目</string>
    <!--delegate_discover-->
    <string name="discover">发现</string>
    <!--delegate_star-->
    <string name="star">集锦</string>
    <!--delegate_shopCart-->
    <string name="shop_cart">购物车</string>
    <string name="shop_cart_clear">清空</string>
    <string name="shop_cart_del">删除</string>
    <string name="shop_cart_settlement">结算</string>
    <string name="shop_cart_settle_all">全选</string>
    <string name="shop_cart_total">合计</string>
    <string name="shop_cart_price">￥0.01</string>
    <string name="icon_shop_cart_select">{fa-check-circle}</string>
    <!--item-shop-cart-->
    <string name="item_shop_cart_minus">{fa-minus-square-o}</string>
    <string name="item_shop_cart_plus">{fa-plus-square-o}</string>
    <!--stub_shop_cart_no_item-->
    <string name="go_buy">去购物</string>
    <!--dialog_pay_panel-->
    <string name="icon_alipay">{icon-ali-pay}</string>
    <string name="icon_weixin">{fa-weixin}</string>
    <string name="cancel_pay">取消支付</string>
</resources>
