<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#1111"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:paddingTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/app_main">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/shop_cart_clear"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"/>

            <android.support.v7.widget.AppCompatTextView
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/shop_cart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_top_shop_cart_del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/shop_cart_del"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"/>
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shop_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"/>

        <android.support.v7.widget.ViewStubCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:minHeight="50dp"
            android:orientation="vertical"/>
        
        <android.support.v7.widget.LinearLayoutCompat
            android:background="@color/app_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:minHeight="50dp"
            android:layout_gravity="bottom">

            <!--全选图标模块-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:minHeight="50dp"
                android:layout_gravity="bottom">

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/icon_shop_cart_select_all"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:text="@string/icon_shop_cart_select"
                    android:textColor="@android:color/darker_gray"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="20sp"/>
                <android.support.v7.widget.AppCompatTextView
                    android:textColor="@color/app_main"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/shop_cart_settle_all"/>
            </android.support.v7.widget.LinearLayoutCompat>
            <!--全选图标模块结束-->

            <!--合计部分-->
            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:minHeight="50dp"
                android:layout_gravity="bottom">

                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/shop_cart_total"
                    android:textColor="@android:color/holo_orange_light"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <android.support.v7.widget.AppCompatTextView
                    android:textSize="20sp"
                    android:text="@string/shop_cart_price"
                    android:textColor="@android:color/holo_orange_dark"
                    android:gravity="center|left"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>
            </android.support.v7.widget.LinearLayoutCompat>

            <TextView
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@color/app_main"
                android:gravity="center"
                android:text="@string/shop_cart_settlement"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        </android.support.v7.widget.LinearLayoutCompat>



</android.support.v7.widget.LinearLayoutCompat>