<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="5dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/icon_item_shop_cart"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/icon_shop_cart_select"
        android:textColor="@android:color/darker_gray"/>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_item_shop_cart"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <!--商品信息-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_item_shop_cart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:layout_marginTop="5dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_item_shop_cart_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:layout_marginTop="5dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_item_shop_cart_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/app_main"
            android:typeface="monospace"/>
    </android.support.v7.widget.LinearLayoutCompat>
    <!--商品信息结束-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_item_minus"
            android:text="@string/item_shop_cart_minus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textSize="24sp"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_item_shop_cart_count"
            android:textSize="18sp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="1"/>

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/icon_item_plus"
            android:text="@string/item_shop_cart_plus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:textSize="24sp"
            android:gravity="center"/>

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.v7.widget.LinearLayoutCompat>